--- a/frontend/src/app/components/channel/chat/message/message.component.scss
+++ b/frontend/src/app/components/channel/chat/message/message.component.scss
@@ -1,5 +1,7 @@
 .message-card {
   max-width: 80vw;
+  background-color: #f4f4f5 !important;
+  color: #222b45 !important;
 }
 
 nb-icon {
